--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,10 @@
-Package: CCSinglecell
-Title: What the Package Does (One Line, Title Case)
+Package: Cc-Singlecell
+Title: Cc-Singlecell
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+    person("Andrew", "Willems", , "awillemscf@egmail.com", role = c("aut", "cre"))
+Description: Uses single-cell RNA-sequencing information and miRNA targeting information to improve colorectal cancer survival prediction.
+License:`use_gpl3_license()`
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
