--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,10 @@ Version: 0.0.0.9000
 Authors@R: 
     person("Andrew", "Willems", , "awillemscf@egmail.com", role = c("aut", "cre"))
 Description: Uses single-cell RNA-sequencing information and miRNA targeting information to improve colorectal cancer survival prediction.
-License:`use_gpl3_license()`
+License: `use_gpl3_license()`
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
